--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ pandas = "^2.2.3"
 tqdm = "^4.66.5"
 
 
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.5"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
