K-Means clustering completed. Need to test and tune model.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ ultralytics = "^8.3.15"
 opencv-python = "^4.10.0.84"
 pandas = "^2.2.3"
 tqdm = "^4.66.5"
+scikit-learn = "^1.5.2"
 
 
 [tool.poetry.group.dev.dependencies]
